src/Sci.NET.CUDA/Native/ArithmeticNativeMethods.cs


    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_tensor_broadcast_tensor_i8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyTensorBroadcastTensorI8(
        sbyte* left,
        sbyte* right,
        sbyte* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_tensor_broadcast_tensor_i16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyTensorBroadcastTensorI16(
        short* left,
        short* right,
        short* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_tensor_broadcast_tensor_i32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyTensorBroadcastTensorI32(
        int* left,
        int* right,
        int* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_tensor_broadcast_tensor_i64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyTensorBroadcastTensorI64(
        long* left,
        long* right,
        long* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_broadcast_tensor_tensor_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyBroadcastTensorTensorFp32(
        float* left,
        float* right,
        float* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_broadcast_tensor_tensor_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyBroadcastTensorTensorFp64(
        double* left,
        double* right,
        double* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_broadcast_tensor_tensor_u8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyBroadcastTensorTensorU8(
        byte* left,
        byte* right,
        byte* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_broadcast_tensor_tensor_u16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyBroadcastTensorTensorU16(
        ushort* left,
        ushort* right,
        ushort* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_broadcast_tensor_tensor_u32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyBroadcastTensorTensorU32(
        uint* left,
        uint* right,
        uint* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_broadcast_tensor_tensor_u64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyBroadcastTensorTensorU64(
        ulong* left,
        ulong* right,
        ulong* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_broadcast_tensor_tensor_i8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyBroadcastTensorTensorI8(
        sbyte* left,
        sbyte* right,
        sbyte* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_broadcast_tensor_tensor_i16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyBroadcastTensorTensorI16(
        short* left,
        short* right,
        short* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_broadcast_tensor_tensor_i32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyBroadcastTensorTensorI32(
        int* left,
        int* right,
        int* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "multiply_broadcast_tensor_tensor_i64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode MultiplyBroadcastTensorTensorI64(
        long* left,
        long* right,
        long* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_tensor_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorTensorFp32(
        float* left,
        float* right,
        float* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_tensor_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorTensorFp64(
        double* left,
        double* right,
        double* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_tensor_u8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorTensorU8(
        byte* left,
        byte* right,
        byte* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_tensor_u16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorTensorU16(
        ushort* left,
        ushort* right,
        ushort* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_tensor_u32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorTensorU32(
        uint* left,
        uint* right,
        uint* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_tensor_u64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorTensorU64(
        ulong* left,
        ulong* right,
        ulong* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_tensor_i8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorTensorI8(
        sbyte* left,
        sbyte* right,
        sbyte* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_tensor_i16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorTensorI16(
        short* left,
        short* right,
        short* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_tensor_i32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorTensorI32(
        int* left,
        int* right,
        int* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_tensor_i64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorTensorI64(
        long* left,
        long* right,
        long* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_broadcast_tensor_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorBroadcastTensorFp32(
        float* left,
        float* right,
        float* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_broadcast_tensor_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorBroadcastTensorFp64(
        double* left,
        double* right,
        double* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_broadcast_tensor_u8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorBroadcastTensorU8(
        byte* left,
        byte* right,
        byte* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_broadcast_tensor_u16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorBroadcastTensorU16(
        ushort* left,
        ushort* right,
        ushort* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_broadcast_tensor_u32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorBroadcastTensorU32(
        uint* left,
        uint* right,
        uint* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_broadcast_tensor_u64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorBroadcastTensorU64(
        ulong* left,
        ulong* right,
        ulong* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_broadcast_tensor_i8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorBroadcastTensorI8(
        sbyte* left,
        sbyte* right,
        sbyte* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_broadcast_tensor_i16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorBroadcastTensorI16(
        short* left,
        short* right,
        short* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_broadcast_tensor_i32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorBroadcastTensorI32(
        int* left,
        int* right,
        int* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_tensor_broadcast_tensor_i64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideTensorBroadcastTensorI64(
        long* left,
        long* right,
        long* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_broadcast_tensor_tensor_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideBroadcastTensorTensorFp32(
        float* left,
        float* right,
        float* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_broadcast_tensor_tensor_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideBroadcastTensorTensorFp64(
        double* left,
        double* right,
        double* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_broadcast_tensor_tensor_u8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideBroadcastTensorTensorU8(
        byte* left,
        byte* right,
        byte* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "divide_broadcast_tensor_tensor_u16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode DivideBroadcastTensorTensorU16(
        ushort* left,
        ushort* right,
        ushort* result,
        long m,
        long n);
